--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fiberport",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://epileksiy.github.io/modernport",
   "dependencies": {
     "@react-three/drei": "^9.18.0",
     "@react-three/fiber": "^8.2.2",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.5.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
